[gd_scene load_steps=4 format=3 uid="uid://cgyahylrus4ae"]

[ext_resource type="Script" uid="uid://cif5bvr5wl5e0" path="res://scripts/menu/settings.gd" id="1_dxr1k"]
[ext_resource type="FontFile" uid="uid://mgk5xixvehjg" path="res://assets/Fonts/DynaPuff-VariableFont_wdth,wght.ttf" id="1_rqcjd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dxr1k"]

[node name="Settings" type="Node2D"]
script = ExtResource("1_dxr1k")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 400.0
offset_bottom = 720.0
color = Color(0.658824, 0.901961, 0.811765, 1)

[node name="Speed" type="Label" parent="."]
offset_left = 46.0
offset_top = 77.0
offset_right = 75.0
offset_bottom = 97.0
scale = Vector2(1.70365, 1.70365)
theme_override_colors/font_color = Color(0.000113828, 0.000113828, 0.000113828, 1)
theme_override_fonts/font = ExtResource("1_rqcjd")
text = "HÄ±z:"

[node name="BoxContainer" type="BoxContainer" parent="."]
offset_left = 107.0
offset_top = 67.0
offset_right = 244.0
offset_bottom = 98.0
scale = Vector2(1.70365, 1.70365)

[node name="Easy" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Kolay"

[node name="Normal" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Orta"

[node name="Hard" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Zor"

[node name="Cancel" type="Button" parent="."]
offset_left = 359.0
offset_top = -24.0
offset_right = 384.0
offset_bottom = 26.0
scale = Vector2(1.70365, 1.70365)
theme_override_colors/font_disabled_color = Color(0.00351917, 0.00351917, 0.00351917, 1)
theme_override_colors/font_hover_pressed_color = Color(0.00566115, 0.00566115, 0.00566115, 1)
theme_override_colors/font_hover_color = Color(0.00566115, 0.00566115, 0.00566115, 1)
theme_override_colors/font_outline_color = Color(0.00351917, 0.00351917, 0.00351917, 1)
theme_override_colors/font_color = Color(0.00566115, 0.00566115, 0.00566115, 1)
theme_override_colors/font_focus_color = Color(0.00566115, 0.00566115, 0.00566115, 1)
theme_override_colors/font_pressed_color = Color(0.00351917, 0.00351917, 0.00351917, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_dxr1k")
text = "x"
flat = true
expand_icon = true

[node name="Profile" type="Label" parent="."]
offset_left = 46.0
offset_top = 168.0
offset_right = 132.0
offset_bottom = 188.0
scale = Vector2(1.70365, 1.70365)
theme_override_colors/font_color = Color(0.000113828, 0.000113828, 0.000113828, 1)
theme_override_fonts/font = ExtResource("1_rqcjd")
text = "Hesap: Yok"

[node name="Scores" type="Button" parent="."]
offset_left = 139.0
offset_top = 258.0
offset_right = 250.0
offset_bottom = 301.0
text = "Skorlar"

[connection signal="pressed" from="BoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="BoxContainer/Normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="BoxContainer/Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Scores" to="." method="_on_scores_pressed"]
